docs/judo-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: judo-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: judo-manager-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: judo-manager-service
                port:
                  number: 80
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: judo-manager-service
                port:
                  number: 80
